[AI Fix] (a11y ADA compliance): set archive-link text color to pass contrast

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -278,4 +278,5 @@ table {
 
 .archive-link{
   font-size: 2em;
+  color: #747474;
 }
